--- a/css/greeting.css
+++ b/css/greeting.css
@@ -1,13 +1,10 @@
 .greeting {
 	margin-bottom: 93px;
 }
-.greeting__container {
-	overflow-y: hidden;
-
-	padding: 40px 50px 0;
+.greeting__wrap{
 	display: flex;
-	flex-direction: row;
 	gap: 60px;
+	padding: 40px 50px 0;
 }
 .greeting__content-left {
 	position: relative;
@@ -36,14 +33,14 @@
 	line-height: 88px;
 	letter-spacing: 3.2px;
 }
-.greeting__underline {
+.greeting__underline-text {
 	position: relative;
 }
 .greeting__line{
 position: absolute;
 top: 0;
 }
-.greeting__bold {
+.greeting__bold-text {
 	color: #fff;
 	font-family: DM Sans;
 	font-size: 80px;
@@ -52,7 +49,7 @@ top: 0;
 	line-height: 88px; /* 110% */
 	letter-spacing: 3.2px;
 }
-.greeting__sn {
+.greeting__sn-wrap {
 	display: flex;
 	flex-direction: column;
 	gap: 16px;
