--- a/css/index.css
+++ b/css/index.css
@@ -3,3 +3,8 @@
 @import 'header.css';
 @import 'fonts.css';
 @import 'greeting.css';
+@import 'episodes.css';
+@import 'episode.css';
+@import 'about.css';
+@import 'subscribe.css';
+@import 'feedback.css';
