--- a/css/about.css
+++ b/css/about.css
@@ -1,8 +1,11 @@
-.about-author__wrap {
+.about-author__container {
 	display: flex;
-	padding: 100px 50px;
 	gap: 60px;
+	justify-content: center;
+	padding-top: 100px;
+	padding-bottom: 100px;
 }
+
 .about-author-description {
 	display: flex;
 	flex-direction: column;
@@ -14,14 +17,23 @@
 	height: 112px;
 	border-radius: 400px;
 	display: flex;
-	align-items: center;
 	justify-content: center;
+	align-items: center;
 	margin-bottom: 20px;
 }
+
 .about__author-button-image {
 	object-fit: contain;
-	width: 50px;
+	width: 108px;
+	height: 64px;
+	display: inline-flex;
+	height: 64px;
+	padding: 13px 24px 13px 13px;
+	align-items: center;
+	justify-content: center;
+	flex-shrink: 0;
 }
+
 .about-author__appeal {
 	color: #118da8;
 	font-size: 18px;
@@ -29,6 +41,7 @@
 	font-weight: 400;
 	line-height: 27px;
 }
+
 .about-author__name {
 	color: #fff;
 	font-size: 65px;
@@ -37,6 +50,7 @@
 	letter-spacing: 2.88px;
 	margin-bottom: 28px;
 }
+
 .about-author__description-text {
 	color: rgba(255, 255, 255, 0.7);
 	font-size: 22px;
@@ -45,6 +59,6 @@
 	margin-bottom: 33px;
 }
 
-.about-author__description-text:last-child{
-margin-bottom: 0;
+.about-author__description-text:last-child {
+	margin-bottom: 0;
 }
