--- a/css/greeting.css
+++ b/css/greeting.css
@@ -1,29 +1,33 @@
-.greeting {
-	margin-bottom: 93px;
-}
-.greeting__wrap{
+.greeting__container {
 	display: flex;
 	gap: 60px;
-	padding: 40px 50px 0;
+	padding-top: 40px;
+	padding-bottom: 0;
 }
+
 .greeting__content-left {
 	position: relative;
+
 }
-.greeting__avatar{
+
+.greeting__avatar {
 	border-radius: 12px;
 }
+
 .greeting__avatar-prop {
 	position: absolute;
-	top: -423px;
 	left: -25px;
+	top: -25px;
+
 }
+
 .greeting__content-right {
 	display: flex;
 	flex-direction: column;
 	padding-right: 60px;
-	justify-content: center;
 	gap: 90px;
 }
+
 .greeting__title {
 	color: #fff;
 	font-family: DM Sans;
@@ -32,38 +36,46 @@
 	font-weight: 400;
 	line-height: 88px;
 	letter-spacing: 3.2px;
+	margin-top: 294px;
 }
+
 .greeting__underline-text {
 	position: relative;
 }
-.greeting__line{
-position: absolute;
-top: 0;
+
+.greeting__line {
+	position: absolute;
 }
+
 .greeting__bold-text {
 	color: #fff;
 	font-family: DM Sans;
 	font-size: 80px;
 	font-style: normal;
 	font-weight: 700;
-	line-height: 88px; /* 110% */
+	line-height: 88px;
+	/* 110% */
 	letter-spacing: 3.2px;
 }
+
 .greeting__sn-wrap {
 	display: flex;
 	flex-direction: column;
 	gap: 16px;
+	padding-left: 22px;
 }
+
 .greeting__sn-title {
 	color: #fff;
 	font-family: DM Sans;
 	font-size: 15px;
 	font-style: normal;
 	font-weight: 400;
-	line-height: 24px; /* 160% */
+	line-height: 24px;
+	/* 160% */
 }
+
 .greeting__list {
 	display: flex;
 	gap: 17px;
 }
-
